--- a/dota2tracker/package.json
+++ b/dota2tracker/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "airtable": "^0.12.1",
+    "antd": "^5.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0"
