--- a/dota2tracker/package.json
+++ b/dota2tracker/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
     "react-slick": "^0.29.0",
+    "react-window": "^1.8.9",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
