--- a/dota2tracker/package.json
+++ b/dota2tracker/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0",
+    "react-scrollbars-custom": "^4.1.1",
     "react-slick": "^0.29.0",
     "react-window": "^1.8.9",
     "slick-carousel": "^1.8.1"
