--- a/dota2tracker/package.json
+++ b/dota2tracker/package.json
@@ -13,8 +13,11 @@
     "@ant-design/icons": "^5.1.4",
     "airtable": "^0.12.1",
     "antd": "^5.6.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-router-dom": "^6.12.0",
     "react-scrollbars-custom": "^4.1.1",
     "react-slick": "^0.29.0",
