--- a/dota2tracker/package.json
+++ b/dota2tracker/package.json
@@ -22,6 +22,7 @@
     "react-scrollbars-custom": "^4.1.1",
     "react-slick": "^0.29.0",
     "react-window": "^1.8.9",
+    "recharts": "^2.6.2",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
